Remove global styles and layout from index.html
Removed global styles and layout configurations from index.html.

--- a/index.html
+++ b/index.html
@@ -6,607 +6,6 @@
     <title>Ramón Lefort - Ingeniero Informático</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;700&display=swap" rel="stylesheet">
-    <style>
-        /* ======== Configuración Global y Dark Mode ======== */
-:root {
-    --color-primario: #00d1b2; /* Un turquesa o verde menta brillante */
-    --color-fondo: #1a1a2e;    /* Azul oscuro casi negro */
-    --color-tarjeta: #1f1f3a;  /* Azul un poco más claro para tarjetas */
-    --color-texto: #e0e0e0;     /* Texto principal (gris claro) */
-    --color-subtexto: #a0a0c0;  /* Texto secundario (gris-azulado) */
-    --fuente-principal: 'Roboto Mono', monospace;
-}
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-html {
-    scroll-behavior: smooth; /* Animación de scroll al hacer clic en nav */
-}
-
-body {
-    font-family: var(--fuente-principal);
-    background-color: var(--color-fondo);
-    color: var(--color-texto);
-    line-height: 1.6;
-}
-
-/* ======== Header y Navegación ======== */
-header {
-    position: fixed; /* Header fijo */
-    width: 100%;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1.5rem 5%;
-    background-color: rgba(26, 26, 46, 0.85); /* Fondo con transparencia */
-    backdrop-filter: blur(10px); /* Efecto "glass" o "blur" */
-    z-index: 100;
-    transition: background-color 0.3s ease;
-}
-
-header .logo {
-    font-size: 1.5rem;
-    font-weight: 700;
-    color: var(--color-primario);
-}
-
-header nav ul {
-    list-style: none;
-    display: flex;
-}
-
-header nav li {
-    margin-left: 2rem;
-}
-
-header nav a {
-    text-decoration: none;
-    color: var(--color-texto);
-    font-weight: 400;
-    position: relative; /* Para la animación de la línea */
-    padding-bottom: 5px;
-}
-
-/* --- ANIMACIÓN NAV --- */
-header nav a::after {
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 0; /* Inicia sin ancho */
-    height: 2px;
-    background-color: var(--color-primario);
-    transition: width 0.4s ease-out; /* Animación de ancho */
-}
-
-header nav a:hover::after,
-header nav a:focus::after {
-    width: 100%; /* La línea crece al 100% en hover */
-}
-
-/* ======== Botón CTA (Call to Action) ======== */
-.cta-button {
-    display: inline-block;
-    background-color: transparent;
-    border: 2px solid var(--color-primario);
-    color: var(--color-primario);
-    padding: 0.75rem 1.5rem;
-    text-decoration: none;
-    font-weight: 700;
-    border-radius: 5px;
-    transition: all 0.3s ease;
-}
-
-/* --- ANIMACIÓN BOTÓN --- */
-.cta-button:hover,
-.cta-button:focus {
-    background-color: var(--color-primario);
-    color: var(--color-fondo);
-    box-shadow: 0 0 15px rgba(0, 209, 178, 0.5); /* Efecto "glow" */
-    transform: translateY(-3px); /* Pequeño salto */
-}
-
-/* ======== Sección Hero (Inicio) ======== */
-.hero {
-    height: 100vh; /* Ocupa toda la pantalla */
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 0 5%;
-    /* Efecto de fondo sutil (opcional) */
-    background: linear-gradient(135deg, var(--color-fondo) 0%, #1f1f3a 100%);
-}
-
-.hero h1 {
-    font-size: 4rem; /* Tamaño grande */
-    color: white;
-    margin-bottom: 1rem;
-}
-
-.hero .subtitulo {
-    font-size: 1.5rem;
-    color: var(--color-subtexto);
-    margin-bottom: 2rem;
-    height: 2.2rem; /* Altura fija para que no salte el texto */
-}
-
-/* Cursor parpadeante para el efecto de máquina de escribir */
-#typing-effect::after {
-    content: '_';
-    color: var(--color-primario);
-    animation: blink 0.7s infinite;
-}
-
-@keyframes blink {
-    0%, 100% { opacity: 1; }
-    50% { opacity: 0; }
-}
-
-/* ======== Secciones de Contenido General ======== */
-.content-section {
-    max-width: 1000px;
-    margin: 4rem auto;
-    padding: 3rem 5%;
-}
-
-.content-section h2 {
-    font-size: 2.5rem;
-    color: var(--color-primario);
-    margin-bottom: 2rem;
-    text-align: center;
-}
-
-/* ======== Sección "Sobre Mí" ======== */
-.about-container {
-    display: flex;
-    justify-content: space-between;
-    gap: 2rem;
-}
-.about-text {
-    flex-basis: 60%;
-}
-.about-skills {
-    flex-basis: 35%;
-}
-.about-skills ul {
-    list-style: none;
-}
-.about-skills li {
-    background-color: var(--color-tarjeta);
-    padding: 0.5rem 1rem;
-    margin-bottom: 0.5rem;
-    border-radius: 5px;
-    border-left: 3px solid var(--color-primario);
-}
-
-/* ======== Sección "Proyectos" (Grid) ======== */
-.project-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    gap: 2rem;
-}
-
-.project-card {
-    background-color: var(--color-tarjeta);
-    border-radius: 8px;
-    overflow: hidden; /* Para que la imagen respete el borde */
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-    transition: transform 0.4s ease, box-shadow 0.4s ease;
-}
-
-/* --- ANIMACIÓN TARJETA PROYECTO --- */
-.project-card:hover {
-    transform: translateY(-10px); /* Se eleva al pasar el ratón */
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
-}
-
-.project-card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover; /* Asegura que la imagen cubra el espacio */
-}
-
-.project-info {
-    padding: 1.5rem;
-}
-
-.project-info h3 {
-    color: var(--color-primario);
-    margin-bottom: 0.5rem;
-}
-
-.project-info p {
-    color: var(--color-subtexto);
-    margin-bottom: 1rem;
-}
-
-.project-links a {
-    text-decoration: none;
-    color: var(--color-primario);
-    margin-right: 1rem;
-    font-weight: 700;
-}
-.project-links a:hover {
-    text-decoration: underline;
-}
-
-/* ======== Formulario de Contacto ======== */
-#contact-form {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-#contact-form input,
-#contact-form textarea {
-    font-family: var(--fuente-principal);
-    padding: 0.8rem;
-    background-color: var(--color-tarjeta);
-    border: 2px solid transparent;
-    color: var(--color-texto);
-    border-radius: 5px;
-    transition: border-color 0.3s ease;
-}
-
-/* --- ANIMACIÓN FORMULARIO --- */
-#contact-form input:focus,
-#contact-form textarea:focus {
-    outline: none;
-    border-color: var(--color-primario);
-}
-
-/* ======== Footer ======== */
-footer {
-    text-align: center;
-    padding: 2rem 5%;
-    background-color: var(--color-tarjeta);
-    margin-top: 4rem;
-    color: var(--color-subtexto);
-}
-
-.social-links a {
-    color: var(--color-subtexto);
-    text-decoration: none;
-    margin: 0 0.5rem;
-    transition: color 0.3s ease;
-}
-
-.social-links a:hover {
-    color: var(--color-primario);
-}
-
-
-/* ========= CLASE DE ANIMACIÓN (PARA JAVASCRIPT) =========
-  Usaremos JS para añadir la clase 'show' cuando el elemento sea visible.
-*/
-
-.section-intro {
-    text-align: center;
-    color: var(--color-subtexto);
-    max-width: 600px;
-    margin: 0 auto 2.5rem auto;
-}
-
-.skills-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 2rem;
-}
-
-.skill-category {
-    background-color: var(--color-tarjeta);
-    padding: 2rem;
-    border-radius: 8px;
-    border-left: 4px solid var(--color-primario);
-}
-
-.skill-category h3 {
-    color: var(--color-primario);
-    margin-bottom: 1.5rem;
-    border-bottom: 1px solid var(--color-fondo);
-    padding-bottom: 0.5rem;
-}
-
-.skill-category ul {
-    list-style: none;
-}
-
-.skill-category li {
-    margin-bottom: 0.75rem;
-    color: var(--color-subtexto);
-    transition: color 0.3s ease, transform 0.3s ease;
-}
-
-.skill-category li:hover {
-    color: var(--color-texto);
-    transform: translateX(5px);
-}
-
-/* (Opcional: Añade clases de iconos si los tienes, ej: .icon-js::before) */
-
-
-/* ======== Timeline (Para Experiencia y Educación) ======== */
-.timeline {
-    position: relative;
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-/* La línea vertical central */
-.timeline::after {
-    content: '';
-    position: absolute;
-    width: 3px;
-    background-color: var(--color-tarjeta);
-    top: 0;
-    bottom: 0;
-    left: 50%;
-    margin-left: -1.5px;
-}
-
-.timeline-item {
-    padding: 1rem 3rem;
-    position: relative;
-    width: 50%;
-}
-
-/* El círculo en la línea */
-.timeline-dot {
-    content: '';
-    position: absolute;
-    width: 15px;
-    height: 15px;
-    background-color: var(--color-fondo);
-    border: 3px solid var(--color-primario);
-    border-radius: 50%;
-    top: 25px;
-    z-index: 1;
-}
-
-/* Items del lado izquierdo */
-.timeline-item:nth-child(odd) {
-    left: 0;
-    padding-right: 50px;
-    text-align: right;
-}
-.timeline-item:nth-child(odd) .timeline-dot {
-    right: -7.5px;
-}
-
-/* Items del lado derecho */
-.timeline-item:nth-child(even) {
-    left: 50%;
-    padding-left: 50px;
-    text-align: left;
-}
-.timeline-item:nth-child(even) .timeline-dot {
-    left: -7.5px;
-}
-
-.timeline-date {
-    font-size: 1rem;
-    font-weight: 700;
-    color: var(--color-primario);
-    margin-bottom: 0.5rem;
-}
-
-.timeline-content {
-    background-color: var(--color-tarjeta);
-    padding: 1.5rem;
-    border-radius: 8px;
-    position: relative;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
-}
-
-.timeline-content h3 {
-    font-size: 1.25rem;
-    color: var(--color-texto);
-    margin-bottom: 0.25rem;
-}
-
-.timeline-location {
-    font-size: 0.9rem;
-    color: var(--color-subtexto);
-    font-style: italic;
-    margin-bottom: 1rem;
-}
-
-.timeline-content ul {
-    list-style-position: inside;
-    padding-left: 0;
-    color: var(--color-subtexto);
-}
-
-.timeline-content li {
-    margin-bottom: 0.5rem;
-}
-
-/* Las "flechas" que apuntan a la línea */
-.timeline-item:nth-child(odd) .timeline-content::after {
-    content: " ";
-    position: absolute;
-    top: 20px;
-    right: -15px; /* Apunta a la derecha */
-    border-width: 8px;
-    border-style: solid;
-    border-color: transparent transparent transparent var(--color-tarjeta);
-}
-
-.timeline-item:nth-child(even) .timeline-content::after {
-    content: " ";
-    position: absolute;
-    top: 20px;
-    left: -15px; /* Apunta a la izquierda */
-    border-width: 8px;
-    border-style: solid;
-    border-color: transparent var(--color-tarjeta) transparent transparent;
-}
-
-
-/* ======== Sección de Logros (Achievements) ======== */
-.achievements-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 1.5rem;
-}
-
-.achievement-card {
-    background-color: var(--color-tarjeta);
-    padding: 2rem;
-    border-radius: 8px;
-    text-align: center;
-    border: 2px solid transparent;
-    transition: border-color 0.3s ease, transform 0.3s ease;
-}
-
-.achievement-card:hover {
-    transform: translateY(-5px);
-    border-color: var(--color-primario);
-}
-
-.achievement-icon {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-}
-
-.achievement-card h3 {
-    color: var(--color-primario);
-    font-size: 1.2rem;
-    margin-bottom: 0.5rem;
-}
-
-.achievement-card p {
-    color: var(--color-subtexto);
-    font-size: 0.9rem;
-}
-
-/* Responsividad para la Timeline en móviles */
-@media screen and (max-width: 768px) {
-    .timeline::after {
-        left: 20px; /* Mueve la línea a la izquierda */
-    }
-
-    .timeline-item {
-        width: 100%;
-        padding-left: 50px; /* Todos los items a la derecha de la línea */
-        padding-right: 1rem;
-        text-align: left;
-    }
-
-    .timeline-item:nth-child(odd),
-    .timeline-item:nth-child(even) {
-        left: 0;
-        padding-left: 50px;
-    }
-
-    .timeline-dot,
-    .timeline-item:nth-child(odd) .timeline-dot,
-    .timeline-item:nth-child(even) .timeline-dot {
-        left: 12.5px; /* Centra el punto en la línea */
-    }
-
-    .timeline-item:nth-child(odd) .timeline-content::after,
-    .timeline-item:nth-child(even) .timeline-content::after {
-        left: -15px; /* Todas las flechas apuntan a la izquierda */
-        border-color: transparent var(--color-tarjeta) transparent transparent;
-    }
-}
-
-/* ======== Menú Móvil y Animación de Hamburguesa ======== */
-
-.menu-toggle {
-    display: none; /* Oculto en escritorio */
-    cursor: pointer;
-    z-index: 101; /* Encima de todo */
-}
-
-.menu-toggle .bar {
-    width: 25px;
-    height: 3px;
-    background-color: var(--color-texto);
-    margin: 5px 0;
-    transition: all 0.4s cubic-bezier(0.68, -0.55, 0.27, 1.55); /* Transición con "rebote" */
-}
-
-/* --- ANIMACIÓN HAMBURGUESA A "X" --- */
-/* Gira la barra de arriba */
-.menu-toggle.active .bar:nth-child(1) {
-    transform: rotate(45deg) translate(6px, 6px);
-}
-/* Oculta la barra del medio */
-.menu-toggle.active .bar:nth-child(2) {
-    opacity: 0;
-    transform: translateX(-20px);
-}
-/* Gira la barra de abajo */
-.menu-toggle.active .bar:nth-child(3) {
-    transform: rotate(-45deg) translate(6px, -6px);
-}
-
-
-/* ======== Responsividad del Header ======== */
-
-@media screen and (max-width: 768px) {
-
-    /* Muestra el botón de hamburguesa */
-    .menu-toggle {
-        display: block;
-    }
-
-    /* Oculta la navegación de escritorio */
-    header nav {
-        position: fixed;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100vh; /* Ocupa toda la pantalla */
-        background-color: var(--color-tarjeta); /* Fondo sólido */
-
-        /* Oculto por defecto (fuera de la pantalla a la derecha) */
-        transform: translateX(100%);
-        opacity: 0;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        transition: transform 0.5s ease-out, opacity 0.4s ease;
-    }
-
-    /* --- ANIMACIÓN MENÚ MÓVIL (Slide-in) --- */
-    /* Muestra el menú cuando está activo */
-    header nav.active {
-        transform: translateX(0);
-        opacity: 1;
-    }
-
-    header nav ul {
-        flex-direction: column; /* Apila los enlaces verticalmente */
-        text-align: center;
-    }
-
-    header nav li {
-        margin: 2rem 0; /* Más separación vertical */
-    }
-
-    header nav a {
-        font-size: 1.5rem; /* Letras más grandes */
-    }
-
-    /* Quita la animación de línea en móvil (opcional) */
-    header nav a::after {
-        display: none;
-    }
-}
-    </style>
 </head>
 <body>
 
@@ -832,4 +231,5 @@ footer {
     </div>
 </footer>
 </body>
+<script src="script.js"></script>
 </html>
