Correct logo name and header text capitalization

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <div class="logo">RamonLefort.dev</div>
+    <div class="logo">ramonlefort.dev</div>
     <nav> <ul id="nav-links"> <li><a href="#inicio">Inicio</a></li>
         <li><a href="#sobre-mi">Sobre Mí</a></li>
         <li><a href="#habilidades">Habilidades</a></li>
@@ -29,7 +29,7 @@
 
 <main>
     <section id="inicio" class="hero">
-        <h1>Hola, soy Ramón Lefort</h1>
+        <h1>Ramón Lefort</h1>
         <p class="subtitulo">
             <span id="typing-effect"></span>
         </p>
