Revise portfolio content and links
Updated personal information and project details in the portfolio.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <header>
-    <div class="logo">ramonlefort.dev</div>
+    <div class="logo">ramonlefort.io</div>
     <nav> <ul id="nav-links"> <li><a href="#inicio">Inicio</a></li>
         <li><a href="#sobre-mi">Sobre Mí</a></li>
         <li><a href="#habilidades">Habilidades</a></li>
@@ -40,16 +40,17 @@
         <h2>Sobre Mí</h2>
         <div class="about-container">
             <div class="about-text">
-                <p>Soy un Ingeniero Informático apasionado por crear soluciones tecnológicas eficientes y escalables. Mi especialidad es el desarrollo [Tu Especialidad, ej: backend con Python y Django / frontend con React]...</p>
-                <p>Me encanta resolver problemas complejos y estoy siempre en busca de aprender nuevas tecnologías. Cuando no estoy programando, me encontrarás [Tu Hobby].</p>
+                <p>Soy un Ingeniero Informático apasionado por crear soluciones tecnológicas eficientes y escalables. Soy un desarrollador fullstack con experiencia en aplicaciones móviles para Android e iOS.</p>
+                <p>Me encanta resolver problemas complejos y estoy siempre en busca de aprender nuevas tecnologías. Interesado en proyectos tecnológicos y en sus aplicaciones al mundo real.</p>
+                <p>Cuando no estoy programando, me encontrarás haciendo deporte.</p>
             </div>
             <div class="about-skills">
                 <h3>Habilidades Clave:</h3>
                 <ul>
-                    <li><i class="icon-js"></i> JavaScript (ES6+)</li>
-                    <li><i class="icon-python"></i> Python</li>
-                    <li><i class="icon-react"></i> React</li>
-                    <li><i class="icon-node"></i> Node.js</li>
+                    <li><i class="icon-c"></i> C</li>
+                    <li><i class="icon-java"></i> Java</li>
+                    <li><i class="icon-html"></i> HTML</li>
+                    <li><i class="icon-css"></i> CSS</li>
                     <li><i class="icon-db"></i> SQL & NoSQL</li>
                     <li><i class="icon-git"></i> Git & GitHub</li>
                 </ul>
@@ -67,30 +68,27 @@
                 <ul>
                     <li><i class="icon-html"></i> HTML5 (Semántico)</li>
                     <li><i class="icon-css"></i> CSS3 (Flexbox y Grid)</li>
-                    <li><i class="icon-js"></i> JavaScript (ES6+) & TypeScript</li>
-                    <li><i class="icon-react"></i> React & Next.js</li>
-                    <li><i class="icon-vue"></i> Vue.js (Opcional)</li>
+                    <li><i class="icon-js"></i> JavaScript (ES6+)</li>
+                    <li><i class="icon-vue"></i> Java (Interficies)</li>
                 </ul>
             </div>
 
             <div class="skill-category">
                 <h3>Backend</h3>
                 <ul>
-                    <li><i class="icon-node"></i> Node.js & Express</li>
-                    <li><i class="icon-python"></i> Python (Django, Flask)</li>
-                    <li><i class="icon-java"></i> Java (Spring Boot) (Opcional)</li>
-                    <li><i class="icon-api"></i> APIs REST & GraphQL</li>
+                    <li><i class="icon-c"></i> C (Nivel de Hardware)</li>
+                    <li><i class="icon-python"></i> Python (Algoritmos y Estructuras de Datos)</li>
+                    <li><i class="icon-java"></i> Java (Programación Orientada a Objetos)</li>
+                    <li><i class="icon-api"></i> APIs</li>
                 </ul>
             </div>
 
             <div class="skill-category">
                 <h3>Bases de Datos y DevOps</h3>
                 <ul>
-                    <li><i class="icon-db"></i> SQL (PostgreSQL, MySQL)</li>
-                    <li><i class="icon-db-nosql"></i> NoSQL (MongoDB, Firebase)</li>
-                    <li><i class="icon-docker"></i> Docker & Kubernetes</li>
-                    <li><i class="icon-aws"></i> AWS / Google Cloud (Opcional)</li>
-                    <li><i class="icon-git"></i> Git & GitHub (CI/CD)</li>
+                    <li><i class="icon-db"></i> SQL (MySQL)</li>
+                    <li><i class="icon-db-nosql"></i> NoSQL (MongoDB)</li>
+                    <li><i class="icon-oracle"></i> Oracle Cloud</li>
                 </ul>
             </div>
         </div>
@@ -102,29 +100,27 @@
 
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                <div class="timeline-date">2022 - Presente</div>
+                <div class="timeline-date">2025 - Presente</div>
                 <div class="timeline-content">
-                    <h3>Ingeniero de Software Senior @ [Nombre de la Empresa]</h3>
-                    <p class="timeline-location">[Ciudad, País]</p>
+                    <h3>Profesor particular</h3>
+                    <p class="timeline-location">La Salle - URL</p>
                     <ul>
-                        <li>Lideré el desarrollo del [Nombre del Proyecto], impactando a [Número] usuarios.</li>
-                        <li>Optimicé consultas a la base de datos, mejorando la velocidad de respuesta en un [XX]%.</li>
-                        <li>Implementé un flujo de CI/CD usando [Herramienta, ej: GitHub Actions] para automatizar despliegues.</li>
-                        <li>Mentoría de 2 desarrolladores junior del equipo.</li>
+                        <li>Profesor de la asignatura de <i>Metodología de la Programación</i> en La Salle - URL.</li>
+                        <li>Profesor de la asignatura de <i>Redes de Área Local</i> en La Salle - URL</li>
                     </ul>
                 </div>
             </div>
 
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                <div class="timeline-date">2020 - 2022</div>
+                <div class="timeline-date">2021 - Presente</div>
                 <div class="timeline-content">
-                    <h3>Desarrollador Full Stack @ [Nombre de Empresa Anterior]</h3>
-                    <p class="timeline-location">[Ciudad, País]</p>
+                    <h3>Monitor de actividades de ocio</h3>
+                    <p class="timeline-location">Viaró Global School - Parroquia Santa Inés</p>
                     <ul>
-                        <li>Desarrollé y mantuve APIs RESTful con Node.js para la aplicación móvil.</li>
-                        <li>Colaboré en el rediseño de la interfaz de usuario con React y TypeScript.</li>
-                        <li>Participé en metodologías Ágiles (Scrum) con sprints de dos semanas.</li>
+                        <li>Participación en 4 casales de verano como monitor, 2 de ellos como responsable de una tanda de 30 niños y 10 monitores.</li>
+                        <li>Organización y preparación de actividades de ocio</li>
+                        <li>Participación y organización de un grupo de 40 jóvenes y 10 monitores.</li>
                     </ul>
                 </div>
             </div>
@@ -138,21 +134,21 @@
 
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                <div class="timeline-date">2016 - 2020</div>
+                <div class="timeline-date">2023 - Presente</div>
                 <div class="timeline-content">
-                    <h3>Máster en Ingeniería Informática (o Grado)</h3>
-                    <p class="timeline-location">[Nombre de la Universidad], [Ciudad]</p>
-                    <p>Especialización en [Tu especialización, ej: Ingeniería de Software o Inteligencia Artificial]. Proyecto Final de Grado sobre [Tema].</p>
+                    <h3>Grado en Ingeniería Informática</h3>
+                    <p class="timeline-location">La Salle URL - Barcelona, España</p>
+                    <p>Grado presencial en Ingeniería Informática en la universidad de La Salle URL donde curso el 3er de los cuatro años.</p>
                 </div>
             </div>
 
             <div class="timeline-item">
                 <div class="timeline-dot"></div>
-                <div class="timeline-date">2023</div>
+                <div class="timeline-date">2021 - 2023</div>
                 <div class="timeline-content">
-                    <h3>Certificación [Nombre, ej: AWS Certified Developer]</h3>
-                    <p class="timeline-location">[Entidad que lo emite, ej: Amazon Web Services]</p>
-                    <p>Certificación que valida las habilidades en [Tecnología].</p>
+                    <h3>Bachillerato</h3>
+                    <p class="timeline-location">Viaró Global School - Barcelona, España</p>
+                    <p>Especialización en la rama tecnológica.</p>
                 </div>
             </div>
 
@@ -160,26 +156,51 @@
     </section>
 
     <section id="logros" class="content-section fade-in">
-        <h2>Logros y Publicaciones</h2>
+        <h2>Logros y Certificaciones</h2>
         <div class="achievements-grid">
 
             <div class="achievement-card">
-                <div class="achievement-icon">🏆</div> <h3>Ganador Hackathon [Nombre]</h3>
-                <p>Primer lugar en el hackathon [Nombre] de 2023, desarrollando una app de [Descripción] en 48 horas.</p>
+                <div class="achievement-icon">🏆</div> <h3>Premio Fundación Princesa de Gerona (x2)</h3>
+                <p>Premio otorgado por la First Lego League en dos ocasiones (2017, 2018) que reconoce al proyecto con más talento del concurso</p>
             </div>
 
             <div class="achievement-card">
-                <div class="achievement-icon">📄</div>
-                <h3>Publicación en [Nombre de Conferencia o Blog]</h3>
-                <p>Autor del artículo "[Nombre del Artículo]" sobre [Tema], publicado en [Medio].</p>
+                <div class="achievement-icon">🖥️</div>
+                <h3>Cisco Certified Network Associate (CCNA)</h3>
+                <p>Certificación del curso de Switching y Routing de la empresa Cisco expedida en 2024.</p>
             </div>
 
             <div class="achievement-card">
-                <div class="achievement-icon">🎙️</div>
-                <h3>Charla Técnica en [Nombre del Evento]</h3>
-                <p>Ponente invitado en [Evento] para hablar sobre [Tema de tu charla].</p>
+                <div class="achievement-icon">📜</div>
+                <h3>Certificate in Advanced English</h3>
+                <p>Certificado expedido por la Universidad de Cambridge en 2023 que certifica un nivel C1 en inglés.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="idiomas" class="content-section fade-in">
+        <h2>Idiomas</h2>
+        <div class="achievements-grid">
+
+            <div class="achievement-card">
+                <h3>Español</h3>
+                <p>Nivel nativo</p>
             </div>
 
+            <div class="achievement-card">
+                <h3>Catalán</h3>
+                <p>Nivel nativo</p>
+            </div>
+
+            <div class="achievement-card">
+                <h3>Inglés</h3>
+                <p>Nivel avanzado</p>
+            </div>
+
+            <div class="achievement-card">
+                <h3>Alemán</h3>
+                <p>Nivel bajo</p>
+            </div>
         </div>
     </section>
 
@@ -187,24 +208,32 @@
         <h2>Proyectos Destacados</h2>
         <div class="project-grid">
             <div class="project-card">
-                <img src="imagen-proyecto1.jpg" alt="Nombre del Proyecto 1">
+                <img src="assets/img/iTunesSearchLS.png" alt="iTunes Search LS">
                 <div class="project-info">
-                    <h3>Nombre del Proyecto 1</h3>
-                    <p>Una breve descripción de lo que hace el proyecto y las tecnologías usadas.</p>
+                    <h3>iTunes Search LS</h3>
+                    <p>Aplicación de música desarrollada en Android Studio con Java.</p>
                     <div class="project-links">
-                        <a href="#" target="_blank">Ver Demo</a>
-                        <a href="#" target="_blank">Código (GitHub)</a>
+                        <a href="https://github.com/RamonLefort/iTunesSearchLS" target="_blank">Código (GitHub)</a>
                     </div>
                 </div>
             </div>
             <div class="project-card">
-                <img src="imagen-proyecto2.jpg" alt="Nombre del Proyecto 2">
+                <img src="assets/img/AlgoritmosOrdenacion.png" alt="Algoritmos de Ordenación">
                 <div class="project-info">
-                    <h3>Nombre del Proyecto 2</h3>
-                    <p>Una breve descripción de lo que hace el proyecto y las tecnologías usadas.</p>
+                    <h3>Algoritmos de Ordenación</h3>
+                    <p>Proyecto desarrollado en Python que ejecuta diversos algoritmos de programación como Insertion Sort, Selection Sort, Merge Sort o Quick Sort.</p>
                     <div class="project-links">
-                        <a href="#" target="_blank">Ver Demo</a>
-                        <a href="#" target="_blank">Código (GitHub)</a>
+                        <a href="https://github.com/RamonLefort/Practica1PAED" target="_blank">Código (GitHub)</a>
+                    </div>
+                </div>
+            </div>
+            <div class="project-card">
+                <img src="assets/img/Graficos3d.png" alt="Gráficos3D">
+                <div class="project-info">
+                    <h3>Gráficos 3D</h3>
+                    <p>Proyecto desarrollado en C++, OpenGL y GLFW que simula un entorno 3D.</p>
+                    <div class="project-links">
+                        <a href="https://github.com/RamonLefort/Graficos3D" target="_blank">Código (GitHub)</a>
                     </div>
                 </div>
             </div>
@@ -224,12 +253,13 @@
 </main>
 
 <footer>
-    <p>Diseñado y programado por [Tu Nombre] © 2025</p>
+    <p>Diseñado y programado por Ramón Lefort © 2025</p>
     <div class="social-links">
-        <a href="https: //linkedin.com/in/tu-usuario" target="_blank">LinkedIn</a>
-        <a href="https://github.com/tu-usuario" target="_blank">GitHub</a>
+        <a href="https://linkedin.com/in/ramonlefort" target="_blank">LinkedIn</a>
+        <a href="https://github.com/ramonlefort" target="_blank">GitHub</a>
     </div>
 </footer>
-</body>
+
 <script src="script.js"></script>
+</body>
 </html>
