Update contact form action URL and class

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
     <section id="contacto" class="content-section fade-in">
         <h2>Hablemos</h2>
         <p>Estoy disponible para oportunidades freelance o un nuevo desafío profesional. ¡Contacta conmigo!</p>
-        <form id="contact-form">
+        <form class="contact-form" action="https://formspree.io/f/xrbjdjvj" method="POST">
             <input type="text" name="name" placeholder="Tu Nombre" required>
             <input type="email" name="email" placeholder="Tu Email" required>
             <textarea name="message" placeholder="Tu Mensaje" rows="5" required></textarea>
